tests/type_errors/list_fn_eq_error.nos
# expect_error: does not implement Eq
# Lists containing functions cannot be compared with ==
main() = {
    xs = [x => x + 1]
    ys = [x => x + 2]
    xs == ys
}
